[tool.poetry]
name = "dynamodb-garbage-collector"
version = "1.1.0"
description = "Remove garbage items from DynamoDB tables"
authors = ["Marçal Pla <marcal.pla@shimoku.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "dynamodb_garbage_collector.py"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.41"
botocore = "^1.29.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
